Fixed styles when info panel visible.

--- a/packages/shared/components/section/Section.module.scss
+++ b/packages/shared/components/section/Section.module.scss
@@ -493,10 +493,8 @@
   }
 
   &.infoPanelVisible {
-    :global {
-      .progressBarContainer {
-        inset-inline-end: 400px;
-      }
+    .progressBarContainer {
+      inset-inline-end: 424px;
     }
   }
 
